src/CFT/EC2CFT.yml
AWSTemplateFormatVersion: '2010-09-09'
Description: >-
  Cloud Formation Template to allow for selection of various sizes of EC2
  instances
Parameters: 
  Environment:
    Description: Which account is the environment being creates
    Type: String
    Default: dev
    AllowedValues:
      - dev
      - qa
      - prod
Mappings: 
  EC2Details:
    CommonDetails:
      VPC: vpc-0b8ad3ab815f525e8
      InstanceType: m1.small
    dev:
      AMI: 'ami-0742b4e673072066f'
      AvailabilityZone: us-east-1a
      KeyName: JacobDevKey
      SubnetId: subnet-0ec1bf2103401e3a5
    prod:
      AMI: 'ami-0742b4e673072066f'
      AvailabilityZone: us-east-1b
      KeyName: JacobProdKey
      SubnetId: subnet-02cc41ade079189c2
    qa:
      AMI: 'ami-0742b4e673072066f'
      AvailabilityZone: us-east-1c
      KeyName: JacobQaKey
      SubnetId: subnet-0f973744a50c4ae86
      
  RegionAndInstanceTypeToAMIID: 
      us-east-1: 
        dev: 'ami-0742b4e673072066f'
        prod: 'ami-0742b4e673072066f'
Conditions:
  Prod: 
    !Equals
        - !Ref Environment  
        - prod 
Resources:
  # myRoute:
  #     Type: AWS::EC2::Route
  #     Properties:
  #       RouteTableId: !Ref myRouteTable
  #       DestinationCidrBlock: 0.0.0.0/0
  #       GatewayId: !Ref myInternetGateway
  # myRouteTable:
  #     Type: AWS::EC2::RouteTable
  #     Properties:
  #       VpcId: !FindInMap ['EC2Details', 'CommonDetails', 'VPC']
        
  #       Tags:
  #       - Key: Environment
  #         Value: !Ref Environment
  # AttachGateway:
  #   Type: AWS::EC2::VPCGatewayAttachment
  #   Properties:
  #     VpcId: !FindInMap ['EC2Details', 'CommonDetails', 'VPC']
  #     InternetGatewayId: !Ref myInternetGateway
  # myInternetGateway:
  #     Type: AWS::EC2::InternetGateway
  #     Properties:
  #       Tags:
  #       - Key: stack
  #         Value: !Ref Environment

  RootInstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Path: "/"
      Roles:
      - !Ref RootRole
  RootRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
        - Effect: Allow
          Principal:
            Service:
            - ec2.amazonaws.com
          Action:
          - sts:AssumeRole
      Path: "/"
  RolePolicies:
    Type: AWS::IAM::Policy
    Properties:
      PolicyName: root
      PolicyDocument:
        Version: '2012-10-17'
        Statement:
        - Effect: Allow
          Action: "*"
          Resource: "*"
      Roles:
      - !Ref RootRole
  MyInstance:
    Type: AWS::EC2::Instance
    Properties:
      IamInstanceProfile: !Ref RootInstanceProfile
      KeyName: !FindInMap ['EC2Details', !Ref Environment, 'KeyName']
      SubnetId: !FindInMap ['EC2Details', !Ref Environment, 'SubnetId']
      SecurityGroupIds:
      - !Ref 'InstanceSecurityGroup'
      InstanceType: !FindInMap ['EC2Details', 'CommonDetails', 'InstanceType']
      AvailabilityZone: !FindInMap ['EC2Details', !Ref Environment, 'AvailabilityZone']
      ImageId: !FindInMap ['EC2Details', !Ref Environment, 'AMI']
      UserData: 
        Fn::Base64:
          !Sub |
            #!/bin/bash -ex
            exec > >(tee /var/log/user-data.log|logger -t user-data -s 2>/dev/console) 2>&1
            sudo yum install -y yum-utils
            sudo yum-config-manager --add-repo https://rpm.releases.hashicorp.com/AmazonLinux/hashicorp.repo
            sudo yum -y install vault
      Tags:
        -
          Key: Name
          Value: !Join ['-', [!Ref AWS::Region, Instance, 'jacob']]
  InstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
        GroupDescription: Allow http to client host
        VpcId: !FindInMap ['EC2Details', 'CommonDetails', 'VPC']
        SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 443
          CidrIp: 0.0.0.0/0
        SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 443
          CidrIp: 0.0.0.0/0
        Tags:
        -
          Key: Name
          Value: !Join ['-', [SecurityGroup, !Ref AWS::Region, !Ref Environment]]
